syntax = "proto3";

option csharp_namespace = "IntegrationAdapters.Protos";

service NetGrpcService{
	rpc transfer (MedicationRequest) returns (MedicationReply);
}

message MedicationRequest{
	string name = 1;
}

message MedicationReply{
	string message = 1;
}
